logs/tracking/build.make.482.log.stderr
In file included from /usr/include/pcl-1.7/pcl/visualization/pcl_visualizer.h:52:0,
                 from /usr/include/pcl-1.7/pcl/visualization/cloud_viewer.h:39,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/PointCloudMap.h:10,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/SparseAlignment.h:13,
                 from /home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:1:
/usr/include/pcl-1.7/pcl/visualization/area_picking_event.h: In member function ‘bool pcl::visualization::AreaPickingEvent::getPointsIndices(std::vector<int>&) const’:
/usr/include/pcl-1.7/pcl/visualization/area_picking_event.h:64:30: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
           if (nb_points_ == -1)
                              ^
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp: In function ‘Eigen::Matrix<float, 8, 1> optimize(Eigen::Matrix<float, 8, 1>, cv::Mat&, cv::Mat&, cv::Mat&, cv::Mat&, cv::Mat&, Eigen::MatrixXf, Eigen::Matrix3f, cv::Mat&)’:
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:114:8: warning: unused variable ‘e_init_norm’ [-Wunused-variable]
  float e_init_norm = 0;
        ^
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp: In member function ‘Eigen::Matrix<float, 8, 1> ImageAlignment::directTransformationEstimation(std::vector<cv::Mat>, cv::Mat&, Eigen::Matrix<float, 8, 1>)’:
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:245:86: error: no matching function for call to ‘std::vector<Eigen::Matrix<float, 3, -1>*>::push_back(Eigen::Matrix<float, 3, -1>)’
   keyframe_pts.push_back(calc3DPoints2(keyframe_depths[i], pixel_coord, K_multiplier));
                                                                                      ^
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:245:86: note: candidates are:
In file included from /usr/include/c++/4.8/vector:64:0,
                 from /usr/include/c++/4.8/bits/random.h:34,
                 from /usr/include/c++/4.8/random:50,
                 from /usr/include/c++/4.8/bits/stl_algo.h:65,
                 from /usr/include/c++/4.8/algorithm:62,
                 from /usr/include/eigen3/Eigen/Core:160,
                 from /usr/include/eigen3/Eigen/Dense:1,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/LieAlgebra.h:4,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/SparseAlignment.h:4,
                 from /home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:1:
/usr/include/c++/4.8/bits/stl_vector.h:901:7: note: void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = Eigen::Matrix<float, 3, -1>*; _Alloc = std::allocator<Eigen::Matrix<float, 3, -1>*>; std::vector<_Tp, _Alloc>::value_type = Eigen::Matrix<float, 3, -1>*]
       push_back(const value_type& __x)
       ^
/usr/include/c++/4.8/bits/stl_vector.h:901:7: note:   no known conversion for argument 1 from ‘Eigen::Matrix<float, 3, -1>’ to ‘Eigen::Matrix<float, 3, -1>* const&’
/usr/include/c++/4.8/bits/stl_vector.h:919:7: note: void std::vector<_Tp, _Alloc>::push_back(std::vector<_Tp, _Alloc>::value_type&&) [with _Tp = Eigen::Matrix<float, 3, -1>*; _Alloc = std::allocator<Eigen::Matrix<float, 3, -1>*>; std::vector<_Tp, _Alloc>::value_type = Eigen::Matrix<float, 3, -1>*]
       push_back(value_type&& __x)
       ^
/usr/include/c++/4.8/bits/stl_vector.h:919:7: note:   no known conversion for argument 1 from ‘Eigen::Matrix<float, 3, -1>’ to ‘Eigen::Matrix<float, 3, -1>*&&’
make[2]: *** [CMakeFiles/tracking.dir/src/SparseAlignment.cpp.o] Error 1
make[1]: *** [CMakeFiles/tracking.dir/all] Error 2
make: *** [all] Error 2
